SERVER-1273 fix name collisions between bson.h and assert_util.h

Both header files define certain assert functions inline.  If you are using the C++ driver,
these function definitions conflict, depending on what order you include the files.
To fix this, I changed the function definitions in assert_util.h to declarations, and also
tweaked the function signatures so that they would match between bson.h and assert_util.h.
I couldn't make the bson.h functions declarations because there is no associated bson.cpp
translation unit, so I had to change the assert_utils.h functions instead.
Removing the inlinedness from the functions is okay because they end up calling functions
that are explicitly marked NOINLINE anyway.  Assertions are exceptional and the cost of
one added function call is not significant.